# QuietDrop

./: .gitignore  README.md  pyproject.toml
quietdrop/: actions.py  cli.py  config.py  db.py  paths.py  scanner.py  watcher.py
quietdrop/web/: __init__.py  app.py
quietdrop/web/static/: style.css
quietdrop/web/templates/: base.html  index.html  item.html
tests/: test_intake_and_actions.py
