[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "quietdrop"
version = "0.1.0"
description = "Local-first file intake + staging system (watch folders, review, archive)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "QuietDrop Contributors" }]
dependencies = [
  "typer>=0.12.3",
  "rich>=13.9.4",
  "watchdog>=6.0.0",
  "fastapi>=0.115.6",
  "uvicorn>=0.30.6",
  "jinja2>=3.1.4",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.4",
]

[project.urls]
Homepage = "https://example.invalid/quietdrop"

[project.scripts]
quietdrop = "quietdrop.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["quietdrop"]

[tool.hatch.build]
include = [
  "quietdrop/web/templates/**",
  "quietdrop/web/static/**",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

